--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+    <body>
+        <h1 style="text-align: center;">Hello World</h1>
+        <p style="text-align: center;">I'm hosted with GitHub Pages.</p>
+    </body>
 </html>
