--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        <h1 style="text-align: center;">Hello World</h1>
-        <p style="text-align: center;">I'm hosted with GitHub Pages.</p>
+    <head>
+        <link rel = "stylesheet" href="style.css" />
+        <meta charset="UTF-8">
+        <meta name = "description" content = "Personal Website">
+        <title>Diego's Website</title>
+    </head>
+    <body style = "background-color: lightblue;">
+        <nav>    
+        </nav>
+        <h1 style="text-align: center;">Diego Gomez</h1>
+        <hr/>
+        <p >Hello, my name is <b>Diego</b>. I was born and raised in Los Angeles and have a knack for creativity and problem solving,</p>
+        <a href = "index2.html"><h3>2nd page</h3></a>
     </body>
 </html>
