--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
         <meta name = "description" content = "Personal Website">
         <title>Diego's Website</title>
     </head>
-    <body style = "background-color: lightblue;">
+    <body>
         <nav>    
         </nav>
-        <h1 style="text-align: center;">Diego Gomez</h1>
+        <h1 id = "name ">Diego Gomez</h1>
         <hr/>
         <p >Hello, my name is <b>Diego</b>. I was born and raised in Los Angeles and have a knack for creativity and problem solving,</p>
         <a href = "index2.html"><h3>2nd page</h3></a>
